2008-08-20  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-index.c: Don't try to open the
	index and flush if the cache size is < 1. This should fix a
	warning we were seeing about not being able to open the cache on
	startup and shutdown.
	
	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-monitor.c: Add support for libinotify to
	know about MOVE events.
	
	* src/trackerd/tracker-processor.[ch]: Added a move queue and API
	to use the new indexer move API when we know about
	files/directories that move.

2008-08-19  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-files.c
	(tracker_files_get_metadata_for_files_in_folder):
	Added NULL element at the end of the fields array. This fixes a
	segfault using the method.
	
2008-08-19  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* src/Makefile.am:
	* src/libinotify/.cvsignore:
	* src/libinotify/Makefile.am:
	* src/libinotify/inotify-handle.c:
	* src/libinotify/inotify-handle.h:
	* src/libinotify/inotify-listhash.c:
	* src/libinotify/inotify-listhash.h:
	* src/libinotify/inotify-log.h:
	* src/libinotify/inotify-monitor.c:
	* src/libinotify/inotify-monitor.h:
	* src/libinotify/libinotify.h:
	* src/libinotify/linux-inotify-syscalls.h:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-monitor.c: Add the initial inotify replacement work
	while glib upstream is fixed. This is to support MOVE events for
	files and directories. This is not yet working.
	
	* tests/common/Makefile.am: Fixed some small errors.

2008-08-19  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.[ch]
	(tracker_db_check_service): Modify to also get mtime.
	* src/tracker-indexer/tracker-indexer.c: Update all callers.
	(should_index_file) (process_file): Check mtimes before reindexing a
	file.

2008-08-19  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.c: Restore accidental
	revert of fix in r2093.
