@@ -1,3 +1,10 @@
+2008-08-19  Philip Van Hoof  <philip@codeminded.be>
+
+	* src/tracker-indexer/tracker-indexer.c
+	* src/tracker-indexer/tracker-indexer.h
+	* src/libtracker-db/tracker-db-index.c: There's no need to flush the
+	word index on pausing the indexer.
+
 2008-08-20  Martyn Russell  <martyn@imendio.com>
 
 	* src/libtracker-db/tracker-db-index.c: Don't try to open the
